Update-on-services

--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -12,10 +12,7 @@
                     <a class="nav-link js-scroll-trigger" href="#about">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">Levels</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#portfolio">Classes</a>
+                    <a class="nav-link js-scroll-trigger" href="#classes">Classes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#place">Place</a>
@@ -28,6 +25,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#More">
+                        More On Spanish
+                    </a>
                 </li>
             </ul>
         </div>
@@ -45,356 +47,32 @@
             <div class="col-lg-8 mx-auto div-fade text-yellow">
                 <p class="mb-4">Academy del Espanol aims to be the center where participants can immerse themselves in the language and culture as part of the learning process.</p>
                 <p class="mb-4">With lively and professional vibe, our Madrid-born founder has passionately distributed the love of teaching with students in Thailand for more than 4 years.</p>
-                @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
             </div>
         </div>
     </div>
 </header>
-<section class="bg-primary text-yellow" id="about">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our Service</h2>
-                <hr class="light">
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/1.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/1.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Online Courses
-                            </div>
-                            <div class="project-name">
-                                30$ per rour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/2.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/2.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Group Courses
-                            </div>
-                            <div class="project-name">
-                                70$ Per hour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/3.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/3.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Personal Courses
-                            </div>
-                            <div class="project-name">
-                                100$ per hour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Children courses
-                            </div>
-                            <div class="project-name">
-                                45$ per hour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                E Preparation (D.E.L.E. )
-                            </div>
-                            <div class="project-name">
-                                120$ per hour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Special courses (IB, IGCSE)
-                            </div>
-                            <div class="project-name">
-                                200$ per hour
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
-<section id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Course level</h2>
-                <hr class="my-4">
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box mt-5 mx-auto">
-                    <i class="fa fa-4x fa-child text-primary mb-3 sr-icons"></i>
-                    <h3 class="mb-3"> Beginner </h3>
-                    <p class="text-muted mb-0">A general basic ability to communicate in a limited number of the most familiar situations in everyday life.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box mt-5 mx-auto">
-                    <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-                    <h3 class="mb-3"> Intermediate </h3>
-                    <p class="text-muted mb-0">Users are able to handle the main structures of the language include communication in social situations.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box mt-5 mx-auto">
-                    <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-                    <h3 class="mb-3"> Advance </h3>
-                    <p class="text-muted mb-0">Approaching the linguistic competence of an educated native speaker.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box mt-5 mx-auto">
-                    <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-                    <h3 class="mb-3"> Master </h3>
-                    <p class="text-muted mb-0">Fine tune areas of specialization such as professional or literary use of Spanish.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="bg-yellow text-red" id="portfolio">
-    <div class="container text-center">
-        <h2 class="mb-4">Spanish Group Classes : Coming Classes</h2>
-        <hr class="my-4">
-        <table id="class-table" class="table table-hover table-sm" cellspacing="0" cellpadding="0" style="border-color:black">
-            <thead class="bg-primary text-yellow">
-                <tr>
-                    <th class="border-dark">Date</th>
-                    <th class="border-dark">Day</th>
-                    <th class="border-dark">Class</th>
-                    <th class="border-dark">Time</th>
-                    <th class="border-dark">Total hours</th>
-                </tr>
-            </thead>
-        </table>
-    </div>
-</section>
-<section class="bg-primary text-yellow" id="place">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our place</h2>
-                <hr class="light">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="mb-4">Our academy del esponol is located at The horizon, community mall only 2-minute walk from Ekamai station. You can find our lively class with green environment on 2nd floor.</p>
-                <p class="mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                From internatonal organisations
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                From famous international school
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                From around the world
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
-<section id="student">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our students</h2>
-                <hr class="my-4">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <p class="section-heading">Our previous and on-going students.</p>
-            </div>
-            <br />
-        </div>
-    </div>
-    <div class="container-fluid p-1">
 
-        <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/1.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/1.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/2.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/2.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/3.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/3.jpg" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="bg-yellow text-red" id="instructor">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="mb-4">Our instructors</h2>
-                <hr class="my-4">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-10 mx-auto">
-                <p class="mb-4 text-center">only native Spanish speakers. They are carefully selected based on their academic qualification, experience and personality. Our language instructors are experienced and certified to teach Spanish a s a foreign language.</p>
-                <p class="mb-4 text-center">They will guide you though the learning objectives effectively through various activities to maximize your potential. Our language instructors are not only highly qualified, but stimulating and dynamic.</p>
-                @*<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>*@
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-1">
-        <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/4.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/4.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Teacher David (Madrid, Spain)
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/5.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/5.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Teacher Ana ( Galicia, Spain)
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="~/Content/img/portfolio/fullsize/6.jpg">
-                    <img class="img-fluid" src="~/Content/img/portfolio/thumbnails/6.jpg" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Teacher Carlos ( Mexico)
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <h2 class="section-heading">Contact Us</h2>
-                <hr class="my-4">
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-1">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <a class="portfolio-box" href="~/Content/img/Institute.png">
-                    <img class="img-fluid img-responsive center-block" src="~/Content/img/Institute.png" alt="">
-                </a>
-                <br />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 ml-auto text-center">
-                <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-                <p><span class="text-yellow">Spanish/English</span>+66-40-940-923</p>
-                <p><span class="text-yellow">Thai/Chinese</span>+66-86-977-1070</p>
-            </div>
-            <div class="col-lg-4 mr-auto text-center">
-                <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-                <p>
-                    <a href="mailto:your-email@your-domain.com">insert-your-email@here.com</a>
-                </p>
-                <p>
-                    <a href="mailto:your-email@your-domain.com">Line-id</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
+@Html.Partial("pv_services")
+@Html.Partial("pv_classes")
+@Html.Partial("pv_place")
+@Html.Partial("pv_student")
+@Html.Partial("pv_instructor")
+@Html.Partial("pv_contact")
+
+@* == Partialview popup pages == *@
+
+@Html.Partial("pv_company")
+@Html.Partial("pv_online")
+@Html.Partial("pv_group")
+@Html.Partial("pv_private")
+@Html.Partial("pv_children")
+@Html.Partial("pv_tutor")
+@Html.Partial("pv_special")
+@Html.Partial("pv_exam")
+
+@* == Partialview popup DELE exam pages == *@
+
+@Html.Partial("pv_dele")
+
+
+
