--- a/SpanishAcademy/Content/css/creative.css
+++ b/SpanishAcademy/Content/css/creative.css
@@ -9,7 +9,7 @@ html {
   height: 100%; }
 
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
+  font-family: 'Plex', 'Helvetica Neue', Arial, sans-serif; }
 
 hr {
   max-width: 50px;
@@ -212,7 +212,7 @@ header.masthead {
       .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
         font-size: 18px; }
   .portfolio-box:hover .portfolio-box-caption {
-    opacity: 1; }
+    opacity: 0.8; }
   .portfolio-box:focus {
     outline: none; }
   @media (min-width: 768px) {
@@ -277,7 +277,7 @@ height: 40px;
 background: #ffffff;
   }
 body{
-background: url('http://www.arcmarks.com/arcmarks/images/grid.jpg');
+/*background: url('http://www.arcmarks.com/arcmarks/images/grid.jpg');*/
 }
 .table td, .table th {
     border-top: 1px solid rgb(128, 128, 128);
