--- a/SpanishAcademy/Views/Home/pv_exam.cshtml
+++ b/SpanishAcademy/Views/Home/pv_exam.cshtml
@@ -17,13 +17,14 @@
                     I also offer specific preparation classes for DELE exams.
                 </p>
                 <p>
-                    Diplomas of Spanish as a Foreign Language (DELE) are divided into six levels
+                    Diplomas of Spanish as a Foreign Language (DELE) are divided into six levels.
                 </p>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h5 class="section-heading">Course level</h5>
+                        <p>Please select the level and see detail below.</p>
                         <hr class="my-4">
                     </div>
                 </div>
@@ -44,6 +45,21 @@
                             </div>
                         </a>
                     </div>
+                    <div id="A1" class="small" style="display:none">
+                        <h6>Spanish Diploma Level A1 (Breakthrough)</h6>
+                        <p>
+                            Certifies that the student is able to communicate using the language in a basic way in situations
+                            having to do with immediate needs or everyday situations.
+                        </p>
+                        <p>
+                            At this level, students are adquiring a general basic ability to communicate in the most familiar
+                            situations in everyday life.
+                        </p>
+                        <p>
+                            They will also be able to understand language use applied to simple contexts needed for survival
+                            such as traveling in a Spanish speaking country.
+                        </p>
+                    </div>
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('A2')">
                             <i class="fa fa-3x fa-bicycle text-primary mb-3"></i>
@@ -57,6 +73,20 @@
                                 </div>
                             </div>
                         </a>
+                    </div>
+                    <div id="A2" class="small" style="display:none">
+                        <h6>panish Diploma Level A2 (Waystage)</h6>
+                        <p>
+                            Certifies that the candidate can understand commonly used, everyday phrases and expressions
+                            related to areas of experience especially relevant to them (basic information about themselves, and
+                            their families, shopping, places of interest, work, etc.).
+                        </p>
+                        <p>
+                            At this level Spanish students will be able to handle the main structures of the language with some
+                            confidence to include a wider range of vocabulary and appropriate communication strategies in a
+                            variety of social situations. Students will be able to argue and describe contexts with a degree of
+                            proficiency.
+                        </p>
                     </div>
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('B1')">
@@ -72,6 +102,17 @@
                             </div>
                         </a>
                     </div>
+                    <div id="B1" class="small" style="display:none">
+                        <h6> Diploma Level B1 (Threshold)</h6>
+                        <p>
+                            Certifies candidates’ capacity to understand the gist of clear texts, in standard language, if they
+                            involve well-known topics related to work, studies or leisure. It also certifies students’ ability to deal
+                            with most situations that occur while travelling in areas where Spanish is spoken; to produce simple
+                            and coherent texts about familiar topics, or topics of personal interest; and lastly to be able to
+                            describe experiences, events, wishes and hopes, as well as to be able to briefly express opinions or
+                            explain plans.
+                        </p>
+                    </div>
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('B2')">
                             <i class="fa fa-3x fa-train text-primary mb-3"></i>
@@ -85,6 +126,20 @@
                                 </div>
                             </div>
                         </a>
+                    </div>
+                    <div id="B2" class="small" style="display:none">
+                        <h6>Spanish Diploma Level B2 (Vantage)</h6>
+                        <p>
+                            Certifies students’ ability to interact with native speakers with a sufficient degree of fluency and
+                            spontaneity to enable easy and natural communication between interlocutors; produce clear and
+                            detailed texts about diverse topics, as well as defend an opinion about general topics, expressing
+                            the pros and cons for each argument; and lastly, understand the gist of complex texts about both
+                            concrete and abstract topics, including technical texts, provided they are within the candidate’s
+                            area of expertise.
+                        </p>
+                        <p>
+                            Students are approaching the linguistic competence of an educated native speaker.
+                        </p>
                     </div>
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('C1')">
@@ -100,6 +155,17 @@
                             </div>
                         </a>
                     </div>
+                    <div id="C1" class="small" style="display:none">
+                        <h6>Spanish Diploma Level C1 (Effective Operational Proficiency)</h6>
+                        <p>
+                            Certifies sufficient linguistic competence to understand a wide variety of lengthy, and somewhat
+                            demanding texts, as well as to grasp implicit meaning in the same; to express themselves fluently
+                            and spontaneously without apparent effort to find the right words; to be able to use the language
+                            flexibly and effectively for social, academic and professional purposes; and finally, to be able to
+                            produce clear, well-structured and detailed texts about topics of some complexity, correctly using
+                            mechanisms of organization, articulation and cohesion in the text.
+                        </p>
+                    </div>
                     <div class="col-lg-2 col-sm-6 text-center">
                         <a class="portfolio-box" onclick="show('C2')">
                             <i class="fa fa-3x fa-rocket text-primary mb-3"></i>
@@ -114,24 +180,21 @@
                             </div>
                         </a>
                     </div>
+                    <div id="C2" class="small" style="display:none">
+                        <h6>Spanish Diploma Level C2 (Mastery)</h6>
+                        <p>
+                            Certifies sufficient linguistic competence to communicate effectively in any situation, proving ability
+                            to spontaneously adapt to any context, with a high degree of precision. The language users show
+                            subtle control of nuances which allow for fluent and natural expression in all interactions.
+                            Students will be helped by language instructors to fine tune areas of specialization such as
+                            professional or literary use of Spanish.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row px-3">
                     <div class="small" id="class-level">
-                        <h6>Spanish Diploma Level A1 (Breakthrough)</h6>
-                        <p>
-                            Certifies that the student is able to communicate using the language in a basic way in situations
-                            having to do with immediate needs or everyday situations.
-                        </p>
-                        <p>
-                            At this level, students are adquiring a general basic ability to communicate in the most familiar
-                            situations in everyday life.
-                        </p>
-                        <p>
-                            They will also be able to understand language use applied to simple contexts needed for survival
-                            such as traveling in a Spanish speaking country.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -140,85 +203,4 @@
             </div>
         </div>
     </div>
-</div>
-
-<div id="A1" style="display:none">
-    <h6>Spanish Diploma Level A1 (Breakthrough)</h6>
-    <p>
-        Certifies that the student is able to communicate using the language in a basic way in situations
-        having to do with immediate needs or everyday situations.
-    </p>
-    <p>
-        At this level, students are adquiring a general basic ability to communicate in the most familiar
-        situations in everyday life.
-    </p>
-    <p>
-        They will also be able to understand language use applied to simple contexts needed for survival
-        such as traveling in a Spanish speaking country.
-    </p>
-</div>
-
-<div id="A2" style="display:none">
-    <h6>panish Diploma Level A2 (Waystage)</h6>
-    <p>
-        Certifies that the candidate can understand commonly used, everyday phrases and expressions
-        related to areas of experience especially relevant to them (basic information about themselves, and
-        their families, shopping, places of interest, work, etc.).
-    </p>
-    <p>
-        At this level Spanish students will be able to handle the main structures of the language with some
-        confidence to include a wider range of vocabulary and appropriate communication strategies in a
-        variety of social situations. Students will be able to argue and describe contexts with a degree of
-        proficiency.
-    </p>
-</div>
-
-<div id="B1" style="display:none">
-    <h6> Diploma Level B1 (Threshold)</h6>
-    <p>
-        Certifies candidates’ capacity to understand the gist of clear texts, in standard language, if they
-        involve well-known topics related to work, studies or leisure. It also certifies students’ ability to deal
-        with most situations that occur while travelling in areas where Spanish is spoken; to produce simple
-        and coherent texts about familiar topics, or topics of personal interest; and lastly to be able to
-        describe experiences, events, wishes and hopes, as well as to be able to briefly express opinions or
-        explain plans.
-    </p>
-</div>
-
-<div id="B2" style="display:none">
-    <h6>Spanish Diploma Level B2 (Vantage)</h6>
-    <p>
-        Certifies students’ ability to interact with native speakers with a sufficient degree of fluency and
-        spontaneity to enable easy and natural communication between interlocutors; produce clear and
-        detailed texts about diverse topics, as well as defend an opinion about general topics, expressing
-        the pros and cons for each argument; and lastly, understand the gist of complex texts about both
-        concrete and abstract topics, including technical texts, provided they are within the candidate’s
-        area of expertise.
-    </p>
-    <p>
-        Students are approaching the linguistic competence of an educated native speaker.
-    </p>
-</div>
-
-<div id="C1" style="display:none">
-    <h6>Spanish Diploma Level C1 (Effective Operational Proficiency)</h6>
-    <p>
-        Certifies sufficient linguistic competence to understand a wide variety of lengthy, and somewhat
-        demanding texts, as well as to grasp implicit meaning in the same; to express themselves fluently
-        and spontaneously without apparent effort to find the right words; to be able to use the language
-        flexibly and effectively for social, academic and professional purposes; and finally, to be able to
-        produce clear, well-structured and detailed texts about topics of some complexity, correctly using
-        mechanisms of organization, articulation and cohesion in the text.
-    </p>
-</div>
-
-<div id="C2" style="display:none">
-    <h6>Spanish Diploma Level C2 (Mastery)</h6>
-    <p>
-        Certifies sufficient linguistic competence to communicate effectively in any situation, proving ability
-        to spontaneously adapt to any context, with a high degree of precision. The language users show
-        subtle control of nuances which allow for fluent and natural expression in all interactions.
-        Students will be helped by language instructors to fine tune areas of specialization such as
-        professional or literary use of Spanish.
-    </p>
 </div>
