--- a/SpanishAcademy/Views/Home/pv_services.cshtml
+++ b/SpanishAcademy/Views/Home/pv_services.cshtml
@@ -112,7 +112,7 @@
                     <img class="img-fluid" src="~/Content/img/ExamClass/ExamClass.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <div class="project-category text-faded small">
                                 Official Exam preparation (D.E.L.E.)
                             </div>
                             <div class="project-name">
