--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -8,12 +8,22 @@
         </div>
     </div>
     <div class="container-fluid p-1">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <img class="portfolio-box img-fluid img-responsive center-block" src="~/Content/img/ContactPage/ContactPage.jpg" alt="">
-                <br />
+        <div class="row no-gutters popup-gallery">
+            <div class="col-lg-12">
+                <a class="portfolio-box" href="~/Content/img/ContactPage/ContactPage.jpg">
+                    <img class="img-fluid" src="~/Content/img/ContactPage/ContactPage.jpg" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Teacher David (Madrid, Spain)
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                </a>
             </div>
         </div>
+        <br />
         <div class="row">
             <div class="col-lg-4 ml-auto text-center">
                 <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
